<resources>
    <string name="app_name">MiddleProjectInter</string>
    <string name="logout">LogOut</string>
    <string name="email">Email</string>
    <string name="email_not_valid">Email is not Valid</string>
    <string name="password">Password</string>
    <string name="error_password">Password must be at least 8 characters</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="login_text">Dicoding Story</string>
    <string name="name">Name</string>
    <string name="input_image">Input Your Image</string>
    <string name="empty_description">Empty Description</string>
    <string name="invalid_password">Invalid Password</string>
    <string name="user_not_found">User Not Found</string>
    <string name="have_account">Have an Account ?  </string>
    <string name="email_created">Email Success Created</string>
    <string name="email_must_valid">Email Must be Valid</string>
    <string name="photo_story">Story Photo</string>
    <string name="gallery">Gallery</string>
    <string name="description">Description</string>
    <string name="add">Add</string>
    <string name="camera">Camera</string>
    <string name="result_upload">Result of Photo</string>
    <string name="add_story">add story</string>
    <string name="password_field_description">password field</string>
</resources>